[gd_scene load_steps=4 format=3 uid="uid://dtl1o6u1inyiq"]

[ext_resource type="Texture2D" uid="uid://qpg4gacbmye0" path="res://icon.svg" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://c8hw0cs3ypxvo" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(38, 36)

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 0)
scale = Vector2(0.304688, 0.294922)
texture = ExtResource("1_7p1mj")

[node name="lr_timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_md0e3")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="lr_timer" to="." method="_on_lr_timer_timeout"]
